# test_for_emphasoft

./: README.md  manage.py  pyproject.toml
api/: apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
test_for_emphasoft/: asgi.py  settings.py  urls.py  wsgi.py
